--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .App {
   text-align: center;
@@ -57,6 +58,11 @@
   src:url("../src/assets/fonts/Inter-Regular.ttf") ;
  
 }
+.poppins {
+  font-family: "Poppins", sans-serif;
+  font-weight:auto;
+  font-style: normal;
+}
 
 .inter_ff{
   font-family: "Inter", sans-serif;
@@ -76,6 +82,7 @@
   font-weight: weight;
   font-style: normal;
 }
+
 .dropdown-container {
   border-radius: 0.5rem;
   overflow: hidden;
