--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,12 @@
   font-style: normal;
 }
 
+.jodit-workplace+.jodit-status-bar:not(:empty) {
+  border-top: 1px solid #dadada;
+  display: none;
+}
+
+
 .inter_ff{
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
