--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.custom-width{
+width: 100% !important;
+}
 
 .App-link {
   color: #61dafb;
