--- a/src/App.css
+++ b/src/App.css
@@ -185,6 +185,27 @@ width: 100% !important;
   background-color: #212529 !important;
 }
 
+
+
+.spinner {
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #000000;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
 /* 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
